--- a/src/styles.css
+++ b/src/styles.css
@@ -81,6 +81,41 @@ img:hover {
   margin-top: 10px;
   min-width: 361px;
 }
+.info-tooltip {
+  position: relative;
+  display: inline-block;
+}
+.info-tooltip-text {
+  visibility: hidden;
+  width: 300px;
+  background-color: rgba(252, 252, 252, 0.9);
+  color: #757575;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 15px;
+  text-align: center;
+  padding: 5px 0;
+  border: solid #757575 1px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  margin-left: -50px;
+  opacity: 0;
+  transition: linear 100ms;
+}
+.info-tooltip:hover .info-tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+.info-icon {
+  font-size: 12px;
+  color: rgba(252, 252, 252, 0.7);
+}
+.info-icon:hover {
+  color: rgba(252, 252, 252, 0.9);
+}
 .search-button {
   margin: 0px;
 }
