Updated styling to C and F when temps are in celsius vs. fahrenheit
Added "active" and "inactive" classes
Created styling for the new classes
Changed convertToCelisus and convertToFahrenheit functions to use new classes

--- a/src/styles.css
+++ b/src/styles.css
@@ -165,8 +165,10 @@ img:hover {
   color: #240ece;
   font-weight: 400;
 }
-.celsius:hover,
-.fahrenheit:hover {
+.active {
+  font-weight: 600;
+}
+.inactive:hover {
   cursor: pointer;
   font-weight: 600;
   transition: all 200ms ease-in-out;
