--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ h1 {
   font-weight: 600;
   color: #fdcb06;
   text-shadow: 2px 2px 2px #1d2c5f;
-  margin-bottom: 0px;
+  margin: 0px;
 }
 p {
   color: #fdcb06;
@@ -70,6 +70,12 @@ img:hover {
   transform: scale(2);
   transition: all 100ms linear;
   cursor: zoom-in;
+}
+.container {
+  margin: 0 auto;
+}
+.province-country {
+  margin: 0px 0px 0px 10px;
 }
 .subtitle,
 .forecast-title {
@@ -208,6 +214,7 @@ img:hover {
   box-shadow: 4px 3px 5px #1d2c5f;
   margin: 20px auto;
   max-width: 400px;
+  max-height: 300px;
 }
 .pokemon-body {
   padding: 0px;
@@ -226,7 +233,9 @@ img:hover {
   font-size: 19px;
 }
 .forecast-card {
-  margin-bottom: 0px;
+  margin: 0px;
+  padding: 5px;
+  max-width: 1100px;
   border: 2px solid #2b6fb6;
   background: rgba(252, 252, 252, 0.7);
 }
