--- a/src/styles.css
+++ b/src/styles.css
@@ -54,14 +54,6 @@ button:hover {
   background: linear-gradient(to right, #a2db95, #24ccaa);
   border: 1px solid #2b6fb6;
 }
-h4 {
-  padding: 10px 2px 0px;
-  margin-bottom: 2px;
-  font-weight: 400;
-  font-size: 16px;
-  color: #fdcb06;
-  text-shadow: 1px 1px 2px #1d2c5f;
-}
 img {
   max-width: 100px;
   padding: 5px 5px 0px;
@@ -218,6 +210,14 @@ img:hover {
 }
 .pokemon-body {
   padding: 0px;
+}
+.weather-boost-title {
+  padding: 5px 0px;
+  margin-bottom: 2px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #fdcb06;
+  text-shadow: 1px 1px 2px #1d2c5f;
 }
 .pokemon-image {
   max-height: 100px;
